# private-verifiable-compute

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  env.example  rust-toolchain.toml
common/blind-rsa/: BUILD.bazel  Cargo.toml
common/blind-rsa/src/: blinder.rs  lib.rs  signer.rs
common/identity/: BUILD.bazel  Cargo.toml
common/identity/src/: lib.rs
common/noise/: BUILD.bazel  Cargo.toml
common/noise/src/: lib.rs
common/oauth/: BUILD.bazel  Cargo.toml
common/oauth/src/: google.rs  lib.rs
common/ohttp/: BUILD.bazel  Cargo.toml
common/ohttp/src/: lib.rs
common/types/: BUILD.bazel  Cargo.toml
common/types/src/: async_rw.rs  http.rs  keys.rs  lib.rs  utils.rs
dependencies/: BUILD.bazel  bookworm.lock.json  bookworm.yaml  jammy.lock.json  jammy.yaml
deployment/: deploy.sh
deployment/minikube/: deploy.sh
deployment/private-verifiable-compute/: Chart.yaml  values.yaml
deployment/private-verifiable-compute/templates/: NOTES.txt  _helpers-name.tpl  _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml
deployment/private-verifiable-compute/templates/client/: deployment.yaml  service.yaml
deployment/private-verifiable-compute/templates/identity-server/: deployment.yaml  service.yaml
deployment/private-verifiable-compute/templates/privacy-gateway/: deployment.yaml  secret.yaml  service.yaml
deployment/private-verifiable-compute/templates/relay/: deployment.yaml  service.yaml
deployment/private-verifiable-compute/templates/tee-llm/: deployment.yaml  embedding_deployment.yaml  embedding_service.yaml  llm_deployment.yaml  llm_service.yaml  service.yaml
deployment/private-verifiable-compute/templates/tests/: test-connection.yaml
docs/: anonymous_routing.md  build.md  gcp.md  minikube.md  noise.md  pvc-client-js-deploy.md
examples/: example_doc.txt
pvc-client/: BUILD.bazel  Cargo.toml  Rocket.toml  build_front.sh  sgx_default_qcnl.conf
pvc-client-js/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pvc-client-js/chat/: index.html
pvc-client-js/public/: config.json  landing.css
pvc-client-js/src/: App.tsx  index.css  main.tsx
pvc-client-js/src/lib/: api.ts  attest_wasm.test.ts  attestation.ts  ohttp_wasm.test.ts  runtime_config.ts  wasm_client.ts
pvc-client/frontend/: README-streamlit.md  frontend.py  package.json  pnpm-lock.yaml  vite.config.js
pvc-client/frontend/src/: App.css  App.jsx  GoogleCallback.jsx  main.jsx
pvc-client/src/: auth.rs  client.rs  key.rs  main.rs  resp.rs  server.rs
pvc-client/static/: index.html
pvc-client/static/assets/: index-BImBt8SB.css  index-CiFXtvpO.css  index-DdkzcyI0.js  index-PsTp8hP6.js
pvc-guest-image/: BUILD.bazel  README.md  cloudbuild.yaml  debug.bu  release.bu  test_ignition.sh
pvc-identity-server/: BUILD.bazel  Cargo.toml  Rocket.toml
pvc-identity-server/src/: main.rs  server.rs
pvc-ohttp-gateway/: BUILD.bazel  Cargo.toml
pvc-ohttp-gateway/src/: handlers.rs  main.rs
pvc-ohttp-relay/: BUILD.bazel  Cargo.toml
pvc-ohttp-relay/src/: main.rs
pvc-tee-llm/: BUILD.bazel  Cargo.toml  Rocket.toml
pvc-tee-llm/prompts/: system.txt  template.txt
pvc-tee-llm/src/: attestation.rs  cache.rs  cache_redis.rs  chat.rs  chunking.rs  embedding.rs  fairing.rs  gpu_attester.rs  inference.rs  main.rs  memcache.rs  noise.rs  rag.rs  request.rs  session.rs  sqlite_vector_store.rs
pvc-wasm/: Cargo.toml
pvc-wasm/src/: async_rw.rs  lib.rs
resources/deployment/: apply.sh  namespace.tf  providers.tf  repositories.tf  variables.tf
resources/global/: cluster.tf  iam.tf  network.tf  service_accounts.tf  variables.tf
scripts/: install_dev_dependencies.sh  sync_wasm_to_client_js.sh
