# Copyright 2025 TikTok Inc. and/or its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_shell//shell:sh_test.bzl", "sh_test")

config_setting(
    name = "is_linux",
    define_values = {"platform": "linux"},
)

config_setting(
    name = "is_macos",
    define_values = {"platform": "macos"},
)

# debug.ign
genrule(
    name = "debug_ign",
    srcs = ["debug.bu"],
    outs = ["debug.ign"],
    cmd = select({
        ":is_linux": "$(location @butane_linux//file) --strict < $(location debug.bu) > $@",
        ":is_macos": "$(location @butane_macos//file) --strict < $(location debug.bu) > $@",
        "//conditions:default": "$(location @butane_linux//file) --strict < $(location debug.bu) > $@",
    }),
    tools = select({
        ":is_linux": ["@butane_linux//file"],
        ":is_macos": ["@butane_macos//file"],
        "//conditions:default": ["@butane_linux//file"],
    }),
)

# release.ign
genrule(
    name = "release_ign",
    srcs = ["release.bu"],
    outs = ["release.ign"],
    cmd = select({
        ":is_linux": "$(location @butane_linux//file) --strict < $(location release.bu) > $@",
        ":is_macos": "$(location @butane_macos//file) --strict < $(location release.bu) > $@",
        "//conditions:default": "$(location @butane_linux//file) --strict < $(location release.bu) > $@",
    }),
    tools = select({
        ":is_linux": ["@butane_linux//file"],
        ":is_macos": ["@butane_macos//file"],
        "//conditions:default": ["@butane_linux//file"],
    }),
)

# sh_test
sh_test(
    name = "ignition_test",
    srcs = ["test_ignition.sh"],
    data = [
        ":debug_ign",
        ":release_ign",
    ],
)
