# Copyright 2025 TikTok Inc. and/or its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "identity-server",
    srcs = [
        "src/main.rs",
        "src/server.rs",
    ],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = [
        "//common/blind-rsa:blind_rsa",
        "//common/oauth",
        "//common/types",
        "@crates//:base64",
        "@crates//:rocket",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [
        ":identity-server",
        "//pvc-identity-server:Rocket.toml",
    ],
)

oci_image(
    name = "image",
    base = "@distroless_cc",
    entrypoint = ["/identity-server"],
    env = {
        "ROCKET_CONFIG": "/Rocket.toml",
        "ROCKET_PROFILE": "release",
        "RUST_LOG": "info,rocket=off",
    },
    tars = [
        ":tar",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load_image",
    image = ":image",
    repo_tags = ["pvc-identity-server:latest"],
    visibility = ["//visibility:public"],
)
