[package]
name = "pvc-ohttp-gateway"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true

[dependencies]
ohttp-gateway = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }