[package]
name = "pvc-ohttp-gateway"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true

[features]
default = ["base64"]
base64 = []

[dependencies]
ohttp-gateway = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
types = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
ohttp_wrap = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
