# Copyright 2025 TikTok Inc. and/or its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "pvc-tee-llm",
    srcs = [
        "src/attestation.rs",
        "src/chat.rs",
        "src/chunking.rs",
        "src/embedding.rs",
        "src/fairing.rs",
        "src/gpu_attester.rs",
        "src/inference.rs",
        "src/main.rs",
        "src/noise.rs",
        "src/rag.rs",
        "src/request.rs",
        "src/session.rs",
        "src/sqlite_vector_store.rs",
    ],
    crate_features = [
        "sqlite",
        "noise",
    ],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = [
        "//common/blind-rsa:blind_rsa",
        "//common/noise",
        "//common/types",
        "@crates//:anyhow",
        "@crates//:attester",
        "@crates//:base64",
        "@crates//:blind-rsa-signatures",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:dashmap",
        "@crates//:futures",
        "@crates//:handlebars",
        "@crates//:hex",
        "@crates//:kbs-types",
        "@crates//:log",
        "@crates//:lru",
        "@crates//:num-bigint-dig",
        "@crates//:nvml-wrapper",
        "@crates//:openai-api-rs",
        "@crates//:p256",
        "@crates//:rand",
        "@crates//:rand_core",
        "@crates//:redis",
        "@crates//:regex",
        "@crates//:reqwest",
        "@crates//:rig-core",
        "@crates//:rig-sqlite",
        "@crates//:rocket",
        "@crates//:rusqlite",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sqlite-vec",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-rusqlite",
        "@crates//:tokio-stream",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

rust_test(
    name = "pvc-tee-llm_test",
    crate = ":pvc-tee-llm",
    data = [":prompts"],
)

filegroup(
    name = "prompts",
    srcs = glob(["prompts/**"]),
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "prompts_pkg",
    srcs = [":prompts"],
    prefix = "prompts",
    strip_prefix = "prompts",
)

pkg_tar(
    name = "tar",
    srcs = [
        ":prompts_pkg",
        ":pvc-tee-llm",
        "//pvc-tee-llm:Rocket.toml",
    ],
)

oci_image(
    name = "image",
    base = "@distroless_cc",
    entrypoint = ["/pvc-tee-llm"],
    env = {
        "ROCKET_CONFIG": "/Rocket.toml",
        "ROCKET_PROFILE": "release",
        "RUST_LOG": "info,rocket=off",
    },
    tars = [
        "@bookworm//:flat",
        ":tar",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load_image",
    image = ":image",
    repo_tags = ["pvc-tee-llm:latest"],
    visibility = ["//visibility:public"],
)
