[package]
name = "ohttp_wrap"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

ohttp = { version = "0.7.1", features = ["rust-hpke", "stream"] }
bhttp = { version = "0.7.0", features = ["http"] }
